--- a/test/sub.css
+++ b/test/sub.css
@@ -1,13 +1,29 @@
 /*NAVBAR*/
 
 
-  /*TAGS*/
+    /*TAGS*/
 
 
-  /*CLASSES*/
+    /*CLASSES*/
     .navbar{
       background-color: #1f0554;
       padding: 20px;
       }
 
-  /*IDS*/
+    /*IDS*/
+
+/*HEADING*/
+
+    /*TAGS*/
+    h1{
+      font-size: 3rem;
+      line-height: 1.5;
+    }
+
+    /*CLASSES*/
+      .heading{
+        padding: 30px;
+        font-family: 'Ubuntu', sans-serif;
+      }
+
+    /*IDS*/
